--- a/notebooks/Creating tf_records.ipynb
+++ b/notebooks/Creating tf_records.ipynb
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "if UNITY:\n",
-    "    TRAIN_DATA_PATHS = [STORAGE_PATH/'data'/x for x in [\"diverse\"]]\n",
-    "    TEST_DATASET = \"diverse_test\" \n",
+    "    TRAIN_DATA_PATHS = [STORAGE_PATH/'data'/x for x in [\"envHz25\"]]\n",
+    "    TEST_DATASET = \"envHz25_test\" \n",
     "\n",
     "TEST_DATA_PATH = STORAGE_PATH/'data'/TEST_DATASET"
    ]
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -276,11 +276,8 @@
      "output_type": "stream",
      "text": [
       "Files may already exist!\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/diverse_test/obs_act_etc/0\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/diverse_test/obs_act_etc/1\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/diverse_test/obs_act_etc/2\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/diverse_test/obs_act_etc/3\n",
-      "/catkin_ws/src/robotics/learning_from_play/data/diverse_test/obs_act_etc/4\n"
+      "/catkin_ws/src/robotics/learning_from_play/data/envHz25_test/obs_act_etc/0\n",
+      "(10003, 36) (10003, 29)\n"
      ]
     }
    ],
@@ -339,136 +336,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'obs': <tf.Tensor: shape=(35,), dtype=float32, numpy=\n",
-       " array([-0.24308231,  0.22951789,  0.33869115,  1.2966044 , -1.3518993 ,\n",
-       "        -0.4532039 ,  0.9147396 , -0.18065019,  0.06104948,  0.40860254,\n",
-       "        -0.70344526,  0.07122915, -0.07123191, -0.70357466,  0.        ,\n",
-       "         0.        ,  0.        ,  0.08397162, -0.98243684,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ],\n",
+       "{'obs': <tf.Tensor: shape=(36,), dtype=float32, numpy=\n",
+       " array([-4.7072646e-01,  3.0020005e-01,  5.4684299e-01,  8.8663620e-01,\n",
+       "        -2.1514592e-01, -2.1786194e-02,  6.4226115e-01, -4.9959069e-01,\n",
+       "         6.1040323e-02,  4.0328974e-01, -1.3435104e-05, -6.5611303e-01,\n",
+       "         2.5450548e-05,  7.5466263e-01,  0.0000000e+00,  0.0000000e+00,\n",
+       "         0.0000000e+00,  2.1855035e-06, -1.0000000e+00,  1.0000000e+00,\n",
+       "        -4.5863992e-01,  1.7190656e-01,  6.0939491e-01, -4.1879883e-01,\n",
+       "        -3.7494299e-01,  5.4131335e-01,  6.2530410e-01, -2.7414027e-01,\n",
+       "         5.6899998e-02,  4.6119377e-01, -3.1765771e-01,  5.6899998e-02,\n",
+       "         6.1551094e-01, -6.9560432e-01,  5.6899998e-02,  5.7699400e-01],\n",
        "       dtype=float32)>,\n",
        " 'acts': <tf.Tensor: shape=(7,), dtype=float32, numpy=\n",
-       " array([-0.2290763 ,  0.1892935 ,  0.32730073,  1.4055648 , -1.3654934 ,\n",
-       "        -0.45534453,  0.9991766 ], dtype=float32)>,\n",
-       " 'achieved_goals': <tf.Tensor: shape=(28,), dtype=float32, numpy=\n",
-       " array([-0.18065019,  0.06104948,  0.40860254, -0.70344526,  0.07122915,\n",
-       "        -0.07123191, -0.70357466,  0.        ,  0.        ,  0.        ,\n",
-       "         0.08397162, -0.98243684,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ], dtype=float32)>,\n",
-       " 'sequence_index': <tf.Tensor: shape=(), dtype=int32, numpy=10002>,\n",
-       " 'sequence_id': <tf.Tensor: shape=(), dtype=int32, numpy=0>,\n",
+       " array([-0.49389893,  0.36887684,  0.45973864,  0.8524729 , -0.07683928,\n",
+       "         0.02084632,  0.9999678 ], dtype=float32)>,\n",
+       " 'achieved_goals': <tf.Tensor: shape=(29,), dtype=float32, numpy=\n",
+       " array([-4.9959069e-01,  6.1040323e-02,  4.0328974e-01, -1.3435104e-05,\n",
+       "        -6.5611303e-01,  2.5450548e-05,  7.5466263e-01,  0.0000000e+00,\n",
+       "         0.0000000e+00,  0.0000000e+00,  2.1855035e-06, -1.0000000e+00,\n",
+       "         1.0000000e+00, -4.5863992e-01,  1.7190656e-01,  6.0939491e-01,\n",
+       "        -4.1879883e-01, -3.7494299e-01,  5.4131335e-01,  6.2530410e-01,\n",
+       "        -2.7414027e-01,  5.6899998e-02,  4.6119377e-01, -3.1765771e-01,\n",
+       "         5.6899998e-02,  6.1551094e-01, -6.9560432e-01,  5.6899998e-02,\n",
+       "         5.7699400e-01], dtype=float32)>,\n",
+       " 'sequence_index': <tf.Tensor: shape=(), dtype=int32, numpy=343>,\n",
+       " 'sequence_id': <tf.Tensor: shape=(), dtype=int32, numpy=1>,\n",
        " 'img': <tf.Tensor: shape=(128, 128, 3), dtype=uint8, numpy=\n",
-       " array([[[110, 101,  92],\n",
-       "         [105,  96,  87],\n",
-       "         [102,  93,  84],\n",
+       " array([[[255, 255, 255],\n",
+       "         [255, 255, 255],\n",
+       "         [255, 255, 255],\n",
        "         ...,\n",
-       "         [255, 255, 250],\n",
-       "         [255, 255, 250],\n",
-       "         [248, 247, 242]],\n",
+       "         [112,  83,  51],\n",
+       "         [149, 120,  88],\n",
+       "         [255, 238, 206]],\n",
        " \n",
-       "        [[101,  92,  83],\n",
-       "         [112, 103,  94],\n",
-       "         [109, 100,  91],\n",
+       "        [[255, 255, 255],\n",
+       "         [255, 255, 255],\n",
+       "         [255, 255, 255],\n",
        "         ...,\n",
-       "         [246, 247, 242],\n",
-       "         [255, 254, 250],\n",
-       "         [255, 255, 251]],\n",
+       "         [122,  95,  65],\n",
+       "         [116,  89,  59],\n",
+       "         [149, 122,  92]],\n",
        " \n",
-       "        [[116, 109, 101],\n",
-       "         [105,  98,  90],\n",
-       "         [ 94,  87,  79],\n",
+       "        [[255, 255, 255],\n",
+       "         [255, 255, 255],\n",
+       "         [255, 255, 255],\n",
        "         ...,\n",
-       "         [254, 255, 253],\n",
-       "         [255, 255, 253],\n",
-       "         [240, 242, 239]],\n",
+       "         [133, 109,  81],\n",
+       "         [118,  94,  66],\n",
+       "         [107,  83,  55]],\n",
        " \n",
        "        ...,\n",
        " \n",
-       "        [[ 65,  68,  75],\n",
-       "         [ 74,  77,  82],\n",
-       "         [ 73,  77,  80],\n",
+       "        [[131, 147, 162],\n",
+       "         [130, 146, 159],\n",
+       "         [129, 143, 154],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]],\n",
+       "         [ 65,  72,  98],\n",
+       "         [ 67,  77, 104],\n",
+       "         [ 71,  80, 109]],\n",
        " \n",
-       "        [[ 59,  64,  70],\n",
-       "         [251, 255, 255],\n",
-       "         [219, 224, 227],\n",
+       "        [[127, 143, 159],\n",
+       "         [117, 133, 148],\n",
+       "         [103, 117, 130],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]],\n",
+       "         [ 66,  73,  99],\n",
+       "         [ 63,  73, 100],\n",
+       "         [ 59,  68,  97]],\n",
        " \n",
-       "        [[247, 254, 255],\n",
-       "         [249, 255, 255],\n",
-       "         [251, 255, 255],\n",
+       "        [[122, 138, 154],\n",
+       "         [120, 136, 151],\n",
+       "         [131, 145, 158],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]]], dtype=uint8)>,\n",
+       "         [ 77,  84, 110],\n",
+       "         [ 64,  74, 101],\n",
+       "         [ 67,  76, 105]]], dtype=uint8)>,\n",
        " 'gripper_img': <tf.Tensor: shape=(64, 64, 3), dtype=uint8, numpy=\n",
-       " array([[[126, 117, 112],\n",
-       "         [ 10,   1,   0],\n",
-       "         [ 19,  11,   8],\n",
+       " array([[[ 28,  38,  40],\n",
+       "         [ 27,  37,  39],\n",
+       "         [ 24,  32,  34],\n",
        "         ...,\n",
-       "         [196, 224, 228],\n",
-       "         [188, 217, 225],\n",
-       "         [196, 226, 234]],\n",
+       "         [ 13,  15,  12],\n",
+       "         [  6,  10,   9],\n",
+       "         [ 10,  14,  13]],\n",
        " \n",
-       "        [[ 90,  82,  79],\n",
-       "         [122, 114, 111],\n",
-       "         [ 14,   6,   3],\n",
+       "        [[ 25,  35,  37],\n",
+       "         [ 30,  38,  40],\n",
+       "         [ 29,  37,  39],\n",
        "         ...,\n",
-       "         [197, 222, 227],\n",
-       "         [217, 244, 251],\n",
-       "         [193, 222, 228]],\n",
+       "         [ 11,  13,  10],\n",
+       "         [  6,  10,   9],\n",
+       "         [  9,  13,  12]],\n",
        " \n",
-       "        [[114, 109, 106],\n",
-       "         [118, 113, 110],\n",
-       "         [103,  98,  95],\n",
+       "        [[ 12,  20,  22],\n",
+       "         [ 23,  32,  31],\n",
+       "         [ 28,  34,  34],\n",
        "         ...,\n",
-       "         [202, 223, 228],\n",
-       "         [227, 251, 255],\n",
-       "         [210, 235, 240]],\n",
+       "         [  7,  11,  10],\n",
+       "         [  8,  12,  11],\n",
+       "         [  7,  11,  10]],\n",
        " \n",
        "        ...,\n",
        " \n",
-       "        [[ 60,  79, 111],\n",
-       "         [ 60,  79, 111],\n",
-       "         [ 62,  78, 111],\n",
+       "        [[ 62,  74,  96],\n",
+       "         [ 62,  74,  96],\n",
+       "         [ 63,  75,  97],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]],\n",
+       "         [131, 141, 151],\n",
+       "         [129, 139, 149],\n",
+       "         [133, 141, 152]],\n",
        " \n",
-       "        [[ 57,  75,  97],\n",
-       "         [ 57,  75,  97],\n",
-       "         [ 58,  74,  97],\n",
+       "        [[ 62,  74,  96],\n",
+       "         [ 62,  74,  96],\n",
+       "         [ 63,  75,  97],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]],\n",
+       "         [120, 143, 161],\n",
+       "         [122, 145, 161],\n",
+       "         [125, 151, 166]],\n",
        " \n",
-       "        [[ 60,  77,  93],\n",
-       "         [ 60,  77,  93],\n",
-       "         [ 61,  76,  95],\n",
+       "        [[ 62,  74,  96],\n",
+       "         [ 62,  74,  96],\n",
+       "         [ 63,  75,  97],\n",
        "         ...,\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255],\n",
-       "         [255, 255, 255]]], dtype=uint8)>}"
+       "         [ 35,  63,  85],\n",
+       "         [ 30,  61,  81],\n",
+       "         [ 33,  66,  83]]], dtype=uint8)>}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
