--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,17 +325,17 @@
      "text": [
       "{   'acts': TensorSpec(shape=(16, None, 7), dtype=tf.float32, name=None),\n",
       "    'dataset_path': TensorSpec(shape=(16, None), dtype=tf.int32, name=None),\n",
-      "    'goals': TensorSpec(shape=(16, None, 28), dtype=tf.float32, name=None),\n",
+      "    'goals': TensorSpec(shape=(16, None, 29), dtype=tf.float32, name=None),\n",
       "    'gripper_imgs': TensorSpec(shape=(16, None, 64, 64, 3), dtype=tf.uint8, name=None),\n",
       "    'imgs': TensorSpec(shape=(16, None, 128, 128, 3), dtype=tf.uint8, name=None),\n",
-      "    'obs': TensorSpec(shape=(16, None, 35), dtype=tf.float32, name=None),\n",
+      "    'obs': TensorSpec(shape=(16, None, 36), dtype=tf.float32, name=None),\n",
       "    'proprioceptive_features': TensorSpec(shape=(16, None, 7), dtype=tf.float32, name=None),\n",
       "    'tstep_idxs': TensorSpec(shape=(16, None), dtype=tf.int32, name=None)}\n"
      ]
     }
    ],
    "source": [
-    "valid_data = dl.extract(TEST_DATA_PATHS, from_tfrecords=args.from_tfrecords)\n",
+    "valid_data = dl.extract(TRAIN_DATA_PATHS, from_tfrecords=args.from_tfrecords)\n",
     "valid_dataset = dl.load(valid_data)"
    ]
   },
