--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -573,48 +573,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Model, Sequential\n",
+    "from tensorflow.keras.layers import Dense, BatchNormalization, ReLU, Input, LSTM, Concatenate, Masking, Reshape, Lambda, \\\n",
+    "    Bidirectional, GRU, LayerNormalization, Bidirectional, Conv2D, MaxPooling2D, Flatten\n",
+    "from tensorflow.keras.regularizers import l1, l2\n",
+    "import tensorflow_probability as tfp\n",
+    "tfd = tfp.distributions\n",
+    "tfb = tfp.bijectors\n",
+    "tfpl = tfp.layers\n",
+    "from lfp.custom_layers import LearnedInitLSTM, LearnedInitGRU\n",
+    "from tensorflow.keras.layers.experimental.preprocessing import Rescaling\n",
+    "\n",
+    "\n",
+    "class spatial_softmax_cnn(tf.keras.Model):\n",
+    "    # TODO: Make height width dependent\n",
+    "    def __init__(self,  img_height=128, img_width = 128, img_channels=3, embedding_size=64, return_spatial_softmax = False):\n",
+    "        super(spatial_softmax_cnn, self).__init__()\n",
+    "        self.img_height = img_height\n",
+    "        self.img_width = img_width\n",
+    "        self.img_channels = img_channels\n",
+    "        self.rescaling = Rescaling(1./255, input_shape=(img_height, img_width, img_channels)) # put it here for portability\n",
+    "        self.conv1 = Conv2D(32, 4, strides=(2,2), padding='same', activation='relu', name='c1')\n",
+    "        self.conv2 = Conv2D(64, 4, strides=(2,2), padding='same', activation='relu', name='c2')\n",
+    "        self.conv3 = Conv2D(64, 3, strides=(1,1), padding='same', activation='relu', name='c3')\n",
+    "        self.conv4 = Conv2D(128, 3, strides=(1,1), padding='same', activation='relu', name='c4')\n",
+    "        # In between these, do a spatial softmax\n",
+    "        self.flatten = Flatten()\n",
+    "        self.dense1 = Dense(256, activation='relu')\n",
+    "        self.dense2 = Dense(embedding_size)\n",
+    "        self.return_spatial_softmax = return_spatial_softmax\n",
+    "\n",
+    "         \n",
+    "        \n",
+    "    def call(self, inputs):\n",
+    "        x = self.rescaling(inputs)\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = self.conv3(x)\n",
+    "        pre_softmax = self.conv4(x)\n",
+    "        \n",
+    "        # Assume features is of size [N, H, W, C] (batch_size, height, width, channels).\n",
+    "        # Transpose it to [N, C, H, W], then reshape to [N * C, H * W] to compute softmax\n",
+    "        # jointly over the image dimensions. \n",
+    "        N, H, W, C = pre_softmax.shape\n",
+    "        pre_softmax = tf.reshape(tf.transpose(pre_softmax, [0, 3, 1, 2]), [N * C, H * W])\n",
+    "        softmax = tf.nn.softmax(pre_softmax)\n",
+    "        # Reshape and transpose back to original format.\n",
+    "        softmax = tf.transpose(tf.reshape(softmax, [N, C, H, W]), [0, 2, 3, 1]) # N, H, W, C\n",
+    "\n",
+    "        # Expand dims by 1\n",
+    "        softmax  = tf.expand_dims(softmax, -1)\n",
+    "\n",
+    "        x, y = tf.range(0, W)/W, tf.range(0, H)/H # so that feature locations are on a 0-1 scale not 0-128\n",
+    "        X,Y = tf.meshgrid(x,y)\n",
+    "        # Image coords is a tensor of size [H,W,2] representing the image coordinates of each pixel\n",
+    "        image_coords = tf.cast(tf.stack([X,Y],-1), tf.float32)\n",
+    "        image_coords= tf.expand_dims(image_coords, 2)\n",
+    "        # multiply to get feature locations\n",
+    "        spatial_soft_argmax = tf.reduce_sum(softmax * image_coords, axis=[1,2])\n",
+    "        \n",
+    "        print(softmax.shape, spatial_soft_argmax.shape)\n",
+    "            \n",
+    "        x = self.flatten(spatial_soft_argmax)\n",
+    "        x = self.dense1(x)\n",
+    "        \n",
+    "        return self.dense2(x), spatial_soft_argmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 16, 16, 128)\n",
-      "Model: \"deep_impala_cnn_9\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "rescaling_9 (Rescaling)      multiple                  0         \n",
-      "_________________________________________________________________\n",
-      "c1 (Conv2D)                  multiple                  1792      \n",
-      "_________________________________________________________________\n",
-      "r1_1 (Conv2D)                multiple                  36928     \n",
-      "_________________________________________________________________\n",
-      "r1_2 (Conv2D)                multiple                  36928     \n",
-      "_________________________________________________________________\n",
-      "c2 (Conv2D)                  multiple                  73856     \n",
-      "_________________________________________________________________\n",
-      "r2_1 (Conv2D)                multiple                  147584    \n",
-      "_________________________________________________________________\n",
-      "r2_2 (Conv2D)                multiple                  147584    \n",
-      "_________________________________________________________________\n",
-      "c3 (Conv2D)                  multiple                  147584    \n",
-      "_________________________________________________________________\n",
-      "r3_1 (Conv2D)                multiple                  147584    \n",
-      "_________________________________________________________________\n",
-      "r3_2 (Conv2D)                multiple                  147584    \n",
-      "_________________________________________________________________\n",
-      "flatten_8 (Flatten)          multiple                  0         \n",
-      "_________________________________________________________________\n",
-      "dense_16 (Dense)             multiple                  8388864   \n",
-      "_________________________________________________________________\n",
-      "dense_17 (Dense)             multiple                  16448     \n",
-      "=================================================================\n",
-      "Total params: 9,292,736\n",
-      "Trainable params: 9,292,736\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "(2, 32, 32, 128, 1) (2, 128, 2)\n"
      ]
     }
    ],
@@ -623,9 +664,8 @@
     "reload(lfp)\n",
     "reload(lfp.train)\n",
     "reload(lfp.model)\n",
-    "c = lfp.model.deep_impala_cnn()\n",
-    "c(labelled_ds.next()['imgs'][0,30][tf.newaxis,:])\n",
-    "c.summary()"
+    "c = spatial_softmax_cnn()\n",
+    "o, idx = c(labelled_ds.next()['imgs'][:2,30])\n"
    ]
   },
   {
