making discrete work

--- a/notebooks/Deploy-Unity.ipynb
+++ b/notebooks/Deploy-Unity.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "<module 'lfp.model' from '/home/sholto/Desktop/robotics/learning_from_play/lfp/model.py'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,27 +573,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor(\n",
-      "[[[ 0.05939088  0.05963968 -0.00357392  0.04861499]\n",
-      "  [ 0.05180043  0.06702187  0.00759073  0.06251352]\n",
-      "  [ 0.05423313  0.0672768   0.00044432  0.05377717]\n",
-      "  [ 0.05322216  0.0695395   0.01230574  0.0569296 ]\n",
-      "  [ 0.00369864  0.01381467 -0.0023389   0.00952349]]\n",
-      "\n",
-      " [[ 0.06011721  0.05291058 -0.02263708  0.0425786 ]\n",
-      "  [ 0.06387101  0.06039747 -0.01533109  0.04614653]\n",
-      "  [ 0.05645291  0.06090579 -0.01848343  0.04581732]\n",
-      "  [ 0.03034912  0.04083724 -0.02159985  0.03356541]\n",
-      "  [ 0.          0.          0.          0.        ]]], shape=(2, 5, 4), dtype=float32)\n",
-      "(2, 20)\n",
-      "(2, 50, 20)\n"
+      "(2, 5, 4)\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'z_enc_tiled' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-94-4aaa1a9a62c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_language\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0menc_policy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplan_policy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmasks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseq_lens\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentence_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlang_labelled_inputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/robotics/learning_from_play/lfp/train.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, inputs, lang_labelled_inputs, external_videos)\u001b[0m\n\u001b[1;32m    394\u001b[0m                 \u001b[0mz_plan_tiled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz_plan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwindow_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 396\u001b[0;31m             \u001b[0menc_policy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_enc_tiled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoals\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    397\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiscrete\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    398\u001b[0m                 \u001b[0mplan_policy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menc_policy\u001b[0m \u001b[0;31m# TODO Concurrently train autoregressive prior\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'z_enc_tiled' referenced before assignment"
      ]
     }
    ],
